<resources>
    <string name="app_name">Sample18</string>
    <string name="title_activity_sample18_1_">Sample18_1:加速度传感器</string>
    <string name="title_activity_sample18_2_">Sample18_2:磁场感应器</string>
    <string name="title_activity_sample18_3_">Sample18_3:光线传感器</string>
    <string name="title_activity_sample18_4_">Sample18_4:温度传感器</string>
    <string name="title_activity_sample18_5_">Sample18_5:接近传感器</string>
    <string name="title_activity_sample18_6_">Sample18_6:姿态传感器</string>
</resources>
